fix font and spacing errors

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -13,14 +13,23 @@ nav{
 
 .call-to-action{
     background-color: #f6f6f6;
-    line-height: 40px;
+    line-height: 20px;
     padding: 15px;
     text-align: center;
+    p{
+        padding: 10px
+    }
+    p:first-child{
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .explore-btn{
+        @include button;
+        padding: 10px;
+    }
 }
 
-.explore-btn{
-    @include button;
-}
+
  
 
 .instructions{
@@ -77,7 +86,17 @@ nav{
     padding: 10px 0 10px 10px; 
 }
 
+.card-title{
+    font-weight: bold;
+}
+
 .card-icon{
     align-self: center;
 }
 
+footer{
+    h1{
+        padding: 1px 0 10px 0;
+    }
+
+}
